[package]
name = "rusty-colors"
version = "0.1.0"
edition = "2021"
authors = ["Bill Hannah"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/billhannah/rusty-colors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
